--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="content-right">
-                <img src="/Images/About.png" class="planet-img" alt="img">
+                <img src="Images/About.png" class="planet-img" alt="img">
             </div>
 
 
