--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planet Shops</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
             </div>
 
             <div class="content-right">
-                <img src="/Images/About.png" class="planet-img" alt="img">
+                <img src="Images/About.png" class="planet-img" alt="img">
             </div>
 
 
@@ -64,7 +64,7 @@
             </div>
 
             <div class="content-right">
-                <img src="/Images/About.png" class="planet-img" alt="img">
+                <img src="Images/About.png" class="planet-img" alt="img">
             </div>
 
 
@@ -86,7 +86,7 @@
             </div>
 
             <div class="content-right">
-                <img src="/Images/About.png" class="planet-img" alt="img">
+                <img src="Images/About.png" class="planet-img" alt="img">
             </div>
 
 
@@ -108,7 +108,7 @@
             </div>
 
             <div class="content-right">
-                <img src="/Images/About.png" class="planet-img" alt="img">
+                <img src="Images/About.png" class="planet-img" alt="img">
             </div>
 
 
